tests/cases/error/error-recursive-include.rapt
# line 1
INCLUDE error-recursive-include.rapt
# line 3
